--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ frozendict = "2.3.10"
 importlib_resources = "6.1.1"
 psutil = "5.9.7"
 isodate = "0.6.1"
+pytz = "^2024.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "7.4.4"
